changed nav number

--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -60,6 +60,11 @@
   /* font-weight: bold; */
 }
 
+.navNumber{
+  font-weight: 900;
+  font-size: 20px;
+}
+
 .scrolled {
   /* background-color: #00486b; */
   background-image: linear-gradient(to bottom right, #00324e, #044e74);
