--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
   flex-direction: column;
   align-items: center;
 }
+
+.text_container span {
+  font-weight: bold;
+  font-size: 18px;
+}
 .title {
   font-size: 36px;
   font-weight: 900;
@@ -121,5 +126,9 @@
   .top_button {
     margin: 36px 0px;
     padding: 8px 80px;
+  }
+  .text_container span {
+    font-weight: bold;
+    font-size: 24px;
   }
 }
