--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -22,7 +22,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  padding: 32px 0px;
+  padding: 24px 0px;
 }
 .footer_container li {
   display: flex;
@@ -37,23 +37,33 @@
 .footer_cta {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   font-size: 16px;
   padding: 24px 0px;
 }
+.footer_cta p {
+  font-size: 16px;
+  text-align: center;
+  width: 50%;
+}
+.footer_cta div {
+  width: 50%;
+}
 .footer_phone {
   height: 16px;
-  padding: 0px 16px;
+  padding: 0px 8px;
 }
 .footer_number {
   text-decoration: none;
+  font-weight: bold;
   color: #ffffff;
 }
 .footer_number:hover {
   color: #df3063;
 }
 .footer_copyright {
+  font-size: 12px;
   text-align: center;
   margin-bottom: 36px;
 }
@@ -86,7 +96,6 @@
   padding-top: 24px;
 }
 
-
 @media (min-width: 769px) {
   .footer_wrapper {
     overflow: hidden;
@@ -99,7 +108,7 @@
   .footer_container li {
     width: 8em;
   }
-  .footer_container li:hover{
+  .footer_container li:hover {
     color: #0a9ad7;
   }
 
