--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -55,13 +55,20 @@
 .container p:active {
   color: #e03063;
 }
-
+.learnMoreClosed {
+  height: 0px;
+  transition: 0.5s all ease;
+  background-image: radial-gradient(#004869, #00324e);
+}
 .learnMoreOpened {
   display: flex;
+  height: 350px;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   background-image: radial-gradient(#004869, #00324e);
+  transition: 0.5s all ease;
+  overflow: hidden;
 }
 .learnMoreOpened h1 {
   font-size: 36px;
@@ -69,11 +76,11 @@
   color: #fff;
   width: 80%;
   line-height: 48px;
-  padding-top: 32px;
+  padding-top: 12px;
 }
 .learnMoreOpened p {
   font-size: 18px;
-  color: #b6e7ff;
+  color: #d1f0ff;
   width: 80%;
   line-height: 32px;
   padding: 20px 24px;
@@ -98,7 +105,7 @@
 }
 
 .arrow {
- display: none;
+  display: none;
 }
 
 @media (min-width: 769px) {
