fixed product styles

--- a/src/Components/Careers/careers.css
+++ b/src/Components/Careers/careers.css
@@ -28,6 +28,7 @@
   /* background-repeat: no-repeat; */
   /* background-size: cover; */
   width: 100vw;
+  transition: width 0.2s ease-in-out;
 }
 
 .split_container h1 {
