--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -13,7 +13,7 @@
 }
 
 .pic1 {
-  background-image: url("https://drive.google.com/uc?export=view&id=1o8NFuYk9vxxEQTu2uNUq8hiAtGQe_n1v");
+  background-image: url("https://i.imgur.com/d0LlyIi.png");
 }
 .medical {
   background-image: url("../../assets/medical.png");
