--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -62,13 +62,13 @@
 }
 .learnMoreOpened {
   display: flex;
-  height: 350px;
-  justify-content: center;
+  height: 300px;
+  justify-content: top;
   flex-direction: column;
   align-items: center;
   background-image: radial-gradient(#004869, #00324e);
   transition: 0.5s all ease;
-  overflow: hidden;
+  overflow: scroll;
 }
 .learnMoreOpened h1 {
   font-size: 36px;
@@ -76,14 +76,14 @@
   color: #fff;
   width: 80%;
   line-height: 48px;
-  padding-top: 12px;
+  margin-top: 12px;
 }
 .learnMoreOpened p {
   font-size: 18px;
   color: #d1f0ff;
   width: 80%;
   line-height: 32px;
-  padding: 20px 24px;
+  margin: 20px 24px;
 }
 
 .card img:hover {
