bob review touch up

--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -16,10 +16,10 @@
   background-image: url("https://i.imgur.com/d0LlyIi.png");
 }
 .medical {
-  background-image: url("../../assets/medical.png");
+  background-image: url("https://i.imgur.com/whPJtfc.png");
 }
 .dentalPic {
-  background-image: url("https://drive.google.com/uc?export=view&id=1VhsrOXY1c33gu8V9HCtLKCZ9pqJRJV5q");
+  background-image: url("https://i.imgur.com/WaNsQ9z.jpg");
   background-position: left;
 }
 .visionKid {
