--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
   align-items: center;
   font-family: "Roboto", sans-serif;
   color: #414042;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 .text_container {
   width: 80%;
