--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,7 @@
   align-items: center;
   font-family: "Roboto", sans-serif;
   color: #414042;
-  max-width: 100%;
-  overflow-x: hidden;
+  max-width: 100vw;
 }
 .text_container {
   width: 80%;
