--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -52,6 +52,81 @@
   align-items: center;
   z-index: -100;
 }
+.pic2 {
+  width: 100vw;
+  height: 400px;
+  background-image: url("https://i.imgur.com/fYgSGR2.jpg");
+  background-color: #3399cc;
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: -100;
+}
+.pic3 {
+  width: 100vw;
+  height: 400px;
+  background-image: url("https://i.imgur.com/TKwgY0l.jpg");
+  background-color: #3399cc;
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: -100;
+}
+.pic4 {
+  width: 100vw;
+  height: 400px;
+  background-image: url("https://i.imgur.com/qc0Ph8o.jpg");
+  background-color: #3399cc;
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: -100;
+}
+.pic5 {
+  width: 100vw;
+  height: 500px;
+  background-image: url("https://i.imgur.com/UmX1ISV.jpg");
+  background-color: #3399cc;
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: -100;
+}
+.pic6 {
+  width: 100vw;
+  height: 300px;
+  background-image: url("https://i.imgur.com/GdImt8g.jpg");
+  background-color: #3399cc;
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: -100;
+}
 
 .pic img {
   width: 80vw;
