--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -22,7 +22,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  padding: 24px 0px;
+  padding: 12px 0px;
 }
 .footer_container li {
   display: flex;
@@ -104,6 +104,10 @@
     width: 60%;
     font-size: 16px;
     justify-content: space-between;
+    margin-top: 32px;
+  }
+  .footer_container ul {
+    padding: 20px 0px;
   }
   .footer_container li {
     width: 8em;
