changes with Jason's feedback

--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -27,7 +27,7 @@
   background-position: right;
 }
 .dental_kid {
-  background-image: url("https://i.imgur.com/f4lflVy.png");
+  background-image: url("https://i.imgur.com/RkPaNDp.jpg");
 }
 
 .bannerTitle {
