--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -39,7 +39,7 @@
 
 .pic {
   width: 100vw;
-  height: 200px;
+  height: 300px;
   background-image: url("https://i.imgur.com/nENeKza.jpg");
   background-color: #3399cc;
   background-position: center;
@@ -50,8 +50,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: -100;
+  z-index: 100;
 }
+
+.pic p{
+color: #fff;
+opacity: .5;
+}
+
 .pic2 {
   width: 100vw;
   height: 400px;
