changed all the health care and photos and careers page

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -60,8 +60,8 @@ opacity: .5;
 
 .pic2 {
   width: 100vw;
-  height: 300px;
-  background-image: url("https://i.imgur.com/fYgSGR2.jpg");
+  height: 400px;
+  background-image: url("https://i.imgur.com/9QRiM4N.jpg");
   background-color: #3399cc;
   background-position: center;
   background-size: cover;
@@ -90,8 +90,8 @@ opacity: .5;
 }
 .pic4 {
   width: 100vw;
-  height: 300px;
-  background-image: url("https://i.imgur.com/qc0Ph8o.jpg");
+  height: 400px;
+  background-image: url("https://i.imgur.com/tw7tNQN.jpg");
   background-color: #3399cc;
   background-position: center;
   background-size: cover;
@@ -105,8 +105,8 @@ opacity: .5;
 }
 .pic5 {
   width: 100vw;
-  height: 300px;
-  background-image: url("https://i.imgur.com/UmX1ISV.jpg");
+  height: 400px;
+  background-image: url("https://i.imgur.com/k8IMWtX.jpg");
   background-color: #3399cc;
   background-position: center;
   background-size: cover;
@@ -120,8 +120,8 @@ opacity: .5;
 }
 .pic6 {
   width: 100vw;
-  height: 300px;
-  background-image: url("https://i.imgur.com/GdImt8g.jpg");
+  height: 400px;
+  background-image: url("https://i.imgur.com/mZPLpOM.jpg");
   background-color: #3399cc;
   background-position: center;
   background-size: cover;
