--- a/src/Components/Careers/careers.css
+++ b/src/Components/Careers/careers.css
@@ -1,5 +1,10 @@
 .careers_wrapper {
   padding: 0px;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .split_container {
