--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -40,7 +40,8 @@
 .pic {
   width: 100vw;
   height: 300px;
-  background-image: url("https://i.imgur.com/nENeKza.jpg");
+  /* background-image: url("https://i.imgur.com/nENeKza.jpg"); */
+  background-image: url("https://i.imgur.com/ixNeybu.jpg");
   background-color: #3399cc;
   background-position: center;
   background-size: cover;
@@ -53,14 +54,14 @@
   z-index: 100;
 }
 
-.pic p{
-color: #fff;
-opacity: .5;
+.pic p {
+  color: #fff;
+  /* opacity: .5; */
 }
 
 .pic2 {
   width: 100vw;
-  height: 400px;
+  height: 200px;
   background-image: url("https://i.imgur.com/9QRiM4N.jpg");
   background-color: #3399cc;
   background-position: center;
@@ -75,7 +76,7 @@ opacity: .5;
 }
 .pic3 {
   width: 100vw;
-  height: 300px;
+  height: 200px;
   background-image: url("https://i.imgur.com/TKwgY0l.jpg");
   background-color: #3399cc;
   background-position: center;
@@ -90,7 +91,7 @@ opacity: .5;
 }
 .pic4 {
   width: 100vw;
-  height: 400px;
+  height: 200px;
   background-image: url("https://i.imgur.com/tw7tNQN.jpg");
   background-color: #3399cc;
   background-position: center;
@@ -105,7 +106,7 @@ opacity: .5;
 }
 .pic5 {
   width: 100vw;
-  height: 400px;
+  height: 200px;
   background-image: url("https://i.imgur.com/k8IMWtX.jpg");
   background-color: #3399cc;
   background-position: center;
@@ -120,7 +121,7 @@ opacity: .5;
 }
 .pic6 {
   width: 100vw;
-  height: 400px;
+  height: 200px;
   background-image: url("https://i.imgur.com/mZPLpOM.jpg");
   background-color: #3399cc;
   background-position: center;
@@ -136,7 +137,7 @@ opacity: .5;
 
 .pic img {
   width: 80vw;
-  opacity: 0.5;
+  /* opacity: 0.5; */
 }
 
 @media (min-width: 769px) {
@@ -150,6 +151,10 @@ opacity: .5;
     text-align: center;
   }
   .pic {
+    height: 400px;
+    background-image: url("https://i.imgur.com/kDIwxvt.jpg");
+  }
+  .pic2, .pic3, .pic4, .pic5, .pic6 {
     height: 400px;
   }
   .full_title {
