--- a/src/Components/SplitBanner/SplitBanner.css
+++ b/src/Components/SplitBanner/SplitBanner.css
@@ -1,6 +1,6 @@
 .layout {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   justify-content: space-around;
   align-items: center;
   box-shadow: 0 2px 8px 0px #00324e;
@@ -34,19 +34,29 @@
 }
 .layout_img {
   width: 100vw;
-  height: 36vh;
+  height: 40vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   /* background-color: #3399cc;   */
   background-image: radial-gradient(#0cb6f2, #0c8dba);
   overflow: hidden;
 }
 .layout_img img {
-  width: 300px;
+  width: 250px;
   z-index: 1;
   cursor: pointer;
+  padding: 0px 12px;
+  align-self: center;
+}
+.layout_img p {
+  font-size: 24px;
+  font-weight: 900;
+  color: #fff;
+  line-height: 48px;
+  text-align: center;
+  width: 80%;
 }
 
 .layout_img img:hover {
@@ -59,7 +69,7 @@
   }
   .layout_text {
     height: 45vh;
-    width: 50vw;
+    width: 45vw;
     padding: 0;
   }
 
@@ -71,10 +81,12 @@
   }
   .layout_img {
     height: 45vh;
-    width: 50vw;
+    width: 55vw;
+    flex-direction: row;
   }
   .layout_img img {
     width: 350px;
+    align-self: flex-end;
   }
   .layout_img img:hover {
     width: 352px;
