--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -19,8 +19,8 @@
   background-image: url("https://i.imgur.com/whPJtfc.png");
 }
 .dentalPic {
-  background-image: url("https://i.imgur.com/WaNsQ9z.jpg");
-  background-position: left;
+  background-image: url("https://i.imgur.com/KyEy718.jpg");
+  background-position: right;
 }
 .visionKid {
   background-image: url("https://i.imgur.com/7iULDVc.png");
