--- a/src/Components/Button/button.css
+++ b/src/Components/Button/button.css
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   background: #df3063;
   font-size: 20px;
   font-weight: bold;
