--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -54,13 +54,9 @@
   text-align: center;
 }
 
-.pic {
+.banner {
   width: 100vw;
-  height: 300px;
-  /* background-image: url("https://i.imgur.com/nENeKza.jpg"); */
-  background-image: url("https://i.imgur.com/ixNeybu.jpg");
   background-color: #3399cc;
-  background-position: center;
   background-size: cover;
   overflow: hidden;
   background-repeat: no-repeat;
@@ -68,113 +64,89 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 100;
 }
 
-.pic p {
-  color: #fff;
-  /* opacity: .5; */
-}
-
-.pic2 {
+.homeBanner {
+  background-image: url("https://i.imgur.com/kDIwxvt.jpg");
   width: 100vw;
+  height: 400px;
+  background-position: center;
+}
+.homePromo{
+  background-image: url("https://i.imgur.com/RkPaNDp.jpg");
+  width: 100vw;
+  height: 400px;
+  background-position: center;
+}
+
+.banner h1 {
+  font-size: 36px;
+  font-weight: 900;
+  line-height: 48px;
+  padding-bottom: 24px;
+  color: #39383a;
+}
+.banner p {
+  width: 80%;
+  text-align: center;
+  font-size: 20px;
+  line-height: 40px;
+  font-weight: bold;
+  padding-bottom: 40px;
+  color: #888a8d;
+}
+.banner img{
+
+}
+
+.medicareBanner{
+
+}
+
+
+
+.banner2 {
   height: 200px;
   background-image: url("https://i.imgur.com/9QRiM4N.jpg");
-  background-color: #3399cc;
-  background-position: center;
-  background-size: cover;
-  overflow: hidden;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: -100;
+
 }
 .howItWorks {
-  width: 100vw;
   height: 600px;
   background-image: url("https://i.imgur.com/z4Rpp2r.jpg");
-  background-color: #fff;
   background-position: center;
-  background-size: contain;
-  overflow: hidden;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: -100;
-  margin: 60px 0px;
 }
 .pic3 {
-  width: 100vw;
   height: 200px;
   background-image: url("https://i.imgur.com/TKwgY0l.jpg");
-  background-color: #3399cc;
   background-position: center;
-  background-size: cover;
-  overflow: hidden;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: -100;
 }
 .pic4 {
-  width: 100vw;
   height: 200px;
   background-image: url("https://i.imgur.com/tw7tNQN.jpg");
-  background-color: #3399cc;
   background-position: center;
-  background-size: cover;
-  overflow: hidden;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: -100;
 }
 .pic5 {
-  width: 100vw;
   height: 200px;
   background-image: url("https://i.imgur.com/k8IMWtX.jpg");
-  background-color: #3399cc;
   background-position: center;
-  background-size: cover;
-  overflow: hidden;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: -100;
 }
 .pic6 {
   width: 100vw;
-  height: 200px;
   background-image: url("https://i.imgur.com/mZPLpOM.jpg");
-  background-color: #3399cc;
   background-position: center;
-  background-size: cover;
-  overflow: hidden;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: -100;
+}
+.dentalPic {
+  height: 500px;
+  background-image: url("https://i.imgur.com/mZPLpOM.jpg");
 }
 
-.pic img {
+.banner img {
   width: 80vw;
-  /* opacity: 0.5; */
 }
 
 .pic .quote {
   padding-top: 52px;
+  color: #fff;
 }
 
 @media (min-width: 769px) {
@@ -187,17 +159,7 @@
   .large-body {
     text-align: center;
   }
-  .pic {
-    height: 350px;
-    background-image: url("https://i.imgur.com/kDIwxvt.jpg");
-  }
-  .pic2,
-  .pic3,
-  .pic4,
-  .pic5,
-  .pic6 {
-    height: 400px;
-  }
+
   .full_title {
     font-size: 48px;
   }
@@ -208,10 +170,19 @@
     margin-bottom: 24px;
     width: 80%;
   }
-  .pic img {
+  .banner img {
     width: 28vw;
   }
-  .pic .quote {
+  .banner .quote {
     padding-top: 32px;
+    color: #fff;
+  }
+
+  .banner h1 {
+    font-size: 60px;
+  }
+  .banner p {
+    width: 100%;
+    font-size: 28px;
   }
 }
