--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -65,26 +65,12 @@
   justify-content: center;
   align-items: center;
 }
-
-.homeBanner {
-  background-image: url("https://i.imgur.com/kDIwxvt.jpg");
-  width: 100vw;
-  height: 400px;
-  background-position: center;
-}
-.homePromo{
-  background-image: url("https://i.imgur.com/RkPaNDp.jpg");
-  width: 100vw;
-  height: 400px;
-  background-position: center;
-}
-
 .banner h1 {
   font-size: 36px;
   font-weight: 900;
   line-height: 48px;
   padding-bottom: 24px;
-  color: #39383a;
+  color: #004869;
 }
 .banner p {
   width: 80%;
@@ -93,27 +79,37 @@
   line-height: 40px;
   font-weight: bold;
   padding-bottom: 40px;
-  color: #888a8d;
-}
-.banner img{
-
+  color: #6d6e71;
 }
 
-.medicareBanner{
-
+.banner img {
 }
 
-
-
-.banner2 {
-  height: 200px;
-  background-image: url("https://i.imgur.com/9QRiM4N.jpg");
-
+.homeBanner {
+  background-image: url("https://i.imgur.com/kDIwxvt.jpg");
+  width: 100vw;
+  height: 400px;
+  background-position: center;
 }
+.homeBanner .quote{
+  color: #004869;
+}
+
+.homePromo {
+  background-image: url("https://i.imgur.com/RkPaNDp.jpg");
+  width: 100vw;
+  height: 400px;
+  background-position: center;
+}
+
 .howItWorks {
+  width: 100vw;
   height: 600px;
   background-image: url("https://i.imgur.com/z4Rpp2r.jpg");
   background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin: 60px 0px;
 }
 .pic3 {
   height: 200px;
@@ -130,15 +126,7 @@
   background-image: url("https://i.imgur.com/k8IMWtX.jpg");
   background-position: center;
 }
-.pic6 {
-  width: 100vw;
-  background-image: url("https://i.imgur.com/mZPLpOM.jpg");
-  background-position: center;
-}
-.dentalPic {
-  height: 500px;
-  background-image: url("https://i.imgur.com/mZPLpOM.jpg");
-}
+
 
 .banner img {
   width: 80vw;
@@ -173,16 +161,14 @@
   .banner img {
     width: 28vw;
   }
-  .banner .quote {
+  .homeBanner .quote {
     padding-top: 32px;
-    color: #fff;
   }
-
   .banner h1 {
     font-size: 60px;
   }
   .banner p {
-    width: 100%;
+    width: 50%;
     font-size: 28px;
   }
 }
