fixed the plans Agents Members div flow

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -142,6 +142,15 @@
 .plansAgentsMembers img {
   width: 100vw;
 }
+.agents {
+  flex-direction: column;
+}
+.agents h1 {
+  text-align: left;
+}
+.agents p {
+  text-align: left;
+}
 
 .homePromo {
   background-image: url("https://i.imgur.com/rG9g9yy.jpg");
@@ -156,7 +165,7 @@
 .homePromo p {
   color: #fff;
   line-height: 32px;
-  width: 50%;
+  width: 80%;
 }
 
 @media (min-width: 769px) {
@@ -229,6 +238,15 @@
     padding: 0px 40px;
     margin-bottom: 60px;
     overflow: hidden;
+  }
+  .agents {
+    flex-direction: row-reverse !important;
+  }
+  .agents h1 {
+    text-align: right;
+  }
+  .agents p {
+    text-align: right;
   }
   .plansAgentsMembers div {
     display: flex;
