footer, sticky nav bug fixed

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -13,14 +13,22 @@
 .footer_container {
   color: #ffffff;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 32px;
+  flex-wrap: wrap;
+}
+
+.footer_container span {
+  opacity: 0;
 }
 
 .footer_container ul {
   list-style: none;
   text-decoration: none;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  flex-direction: column;
   align-items: center;
   padding: 12px 0px;
 }
@@ -37,19 +45,22 @@
 .footer_cta {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   font-size: 16px;
   padding: 24px 0px;
-}
-.footer_cta p {
-  font-size: 16px;
+  width: 100%;
   text-align: center;
-  width: 50%;
 }
 .footer_cta div {
   width: 50%;
 }
+.footer_cta p {
+  font-size: 16px;
+  text-align: center;
+  color: #ffffff;
+}
+
 .footer_phone {
   height: 16px;
   padding: 0px 8px;
@@ -66,6 +77,7 @@
   font-size: 12px;
   text-align: center;
   margin-bottom: 36px;
+  color: #888a8d;
 }
 
 .footer_logo {
@@ -74,12 +86,12 @@
 
 .social_media_wrapper {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around !important;
   align-items: center;
   padding: 20px 20px;
 }
 .social_media_icon {
-  width: 24px;
+  width: 28px;
   padding: 0px 8px;
 }
 
@@ -101,13 +113,16 @@
     overflow: hidden;
   }
   .footer_container {
-    width: 60%;
+    width: 100%;
     font-size: 16px;
-    justify-content: space-between;
-    margin-top: 32px;
+    justify-content: center;
+  }
+  .footer_container span {
+    opacity: 1;
   }
   .footer_container ul {
     padding: 20px 0px;
+    flex-direction: row;
   }
   .footer_container li {
     width: 8em;
@@ -120,9 +135,15 @@
     color: #df3063;
     font-weight: bold;
   }
+
   .footer_cta {
-    font-size: 20px;
+    font-size: 24px;
   }
+
+  .footer_cta p {
+    font-size: 24px;
+  }
+
   .footer_phone {
     height: 24px;
     padding: 0px 16px;
@@ -139,6 +160,7 @@
     width: 40px;
   }
   .footer_copyright {
+    width: 80%;
     border-top: 1px solid #999;
     padding-top: 26px;
     font-size: 12px;
