--- a/src/Components/Medicare/medicare.css
+++ b/src/Components/Medicare/medicare.css
@@ -1,7 +1,9 @@
 .medicareBanner {
-  background-image: url("https://i.imgur.com/whPJtfc.png");
-  height: 400px;
+  background-image: url("https://i.imgur.com/bJTSEJm.jpg");
   background-position: center;
+  width: 100vw;
+  height: 400px;
+  display: flex;
 }
 
 .medicarePromo {
@@ -9,3 +11,47 @@
   background-image: url("https://i.imgur.com/mZPLpOM.jpg");
   background-position: center;
 }
+
+.medicareBanner div{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  text-align: center;
+  align-items: center;
+}
+.medicareBanner .button{
+  width: auto;
+}
+
+@media (min-width: 769px) {
+
+  .medicareBanner {
+    background-position: left;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+    margin-bottom: 60px;
+  }
+  .medicareBanner div {
+    width: auto;
+    padding: 20px;
+  }
+  .medicareBanner h1 {
+    font-size: 40px;
+    color: #FFF;
+    width: 80%;
+  }
+  .medicareBanner p {
+    width: 80%;
+    font-size: 24px;
+    font-weight: 300;
+    color: #e3e4e5;
+    padding-bottom: 12px;
+  }
+
+}
+
+
+
+
