--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -75,11 +75,11 @@
 .banner p {
   width: 80%;
   text-align: center;
-  font-size: 20px;
   line-height: 40px;
-  font-weight: bold;
   padding-bottom: 40px;
   color: #6d6e71;
+  font-size: 24px;
+  font-weight: normal;
 }
 .banner img {
   width: 80vw;
@@ -231,7 +231,7 @@
   .homeCall p {
     width: 80%;
     font-size: 24px;
-    font-weight: 300;
+    font-weight: normal;
   }
   .plansAgentsMembers {
     display: flex;
