--- a/src/Components/Button/button.css
+++ b/src/Components/Button/button.css
@@ -1,7 +1,3 @@
-/* .button_wrapper {
-
-} */
-
 .button {
   text-decoration: none;
   display: flex;
@@ -33,56 +29,32 @@
 }
 
 .button1 {
-  position: relative;
-  display: block;
-  padding: 16px 56px;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: 2px solid #004869;
+  background: #fff;
   font-size: 20px;
   font-weight: bold;
   letter-spacing: 4px;
-  text-decoration: none;
-  text-transform: uppercase;
   color: #004869;
-  border: none;
-  border: 2px solid #be234f;
-  overflow: hidden;
-  transition: 0.5s all ease;
+  text-transform: uppercase;
+  padding: 20px;
+  transition: 0.2s all ease;
+  width: 80vw;
 }
 
-.button1::before {
-  background: #be234f;
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: -1;
-  transition: all 0.4s ease;
-}
-
-.btn1::before {
-  width: 100%;
-  height: 0;
-  transform: translate(-50%, -50%) rotate(45deg);
-}
-.btn1:hover::before {
-  height: 680%;
+.button1:active {
+  background: #f3f3f3;
+  box-shadow: 0 0 5px 0 #ccc;
 }
 
 .button1:hover {
-  color: #ffff;
-}
-
-.anim_button {
-  animation: anim_button 1s ease-out 0s 1;
-}
-@keyframes anim_button {
-  0% {
-    transform: translateX(-2%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0%);
-  }
+  cursor: pointer;
+  border: 2px solid #be234f;
+  color: #db2a58;
 }
 
 @media (min-width: 769px) {
@@ -91,7 +63,11 @@
     padding: 20px 56px;
     width: initial;
   }
-  .dental_button {
-    margin-top: 200px;
+
+  .button1 {
+    font-size: 20px;
+    padding: 20px 56px;
+    width: initial;
   }
+  
 }
