--- a/src/Components/Dental/dental.css
+++ b/src/Components/Dental/dental.css
@@ -1,4 +1,5 @@
 .dentalBanner {
     height: 500px;
     background-image: url("https://i.imgur.com/KyEy718.jpg");
+    background-position: right;
   }
