--- a/src/Components/Medicare/medicare.css
+++ b/src/Components/Medicare/medicare.css
@@ -29,7 +29,7 @@
 }
 
 .medicareBanner .button {
-  width: auto;
+  width: 80vw;
 }
 
 @media (min-width: 769px) {
@@ -55,5 +55,8 @@
     font-size: 24px;
     color: #e3e4e5;
     padding-bottom: 12px;
+  }
+  .medicareBanner .button {
+    width: auto;
   }
 }
