--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -119,7 +119,7 @@
     z-index: -100;
     transition: 0.4s ease-in;
   }
-  .items_nav ul li:hover ul {
+  .navNumber:hover ul {
     /* display: block; */
     opacity: 1;
     transition: 0.3s ease-in;
