--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -85,6 +85,7 @@
 }
 
 .social_media_wrapper {
+  width: 100vw;
   display: flex;
   justify-content: space-around !important;
   align-items: center;
@@ -113,7 +114,7 @@
     overflow: hidden;
   }
   .footer_container {
-    width: 100%;
+    width: 80%;
     font-size: 16px;
     justify-content: center;
   }
