--- a/src/Components/Dental/dental.css
+++ b/src/Components/Dental/dental.css
@@ -3,3 +3,12 @@
     background-image: url("https://i.imgur.com/KyEy718.jpg");
     background-position: right;
   }
+
+  .dentalBanner h1{
+font-size: 40px;
+text-align: center;
+  }
+  .dentalBanner p{
+font-size: 28px;
+text-align: center;
+  }
