--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -21,7 +21,7 @@
 }
 
 .footer_container span {
-  opacity: 0;
+  display: none;
 }
 
 .footer_container ul {
@@ -39,7 +39,7 @@
   text-decoration: none;
   color: #ffffff;
   box-sizing: border-box;
-  margin: 0px 4px;
+  margin: 16px 4px;
 }
 
 .footer_cta {
@@ -85,7 +85,6 @@
 }
 
 .social_media_wrapper {
-  width: 100vw;
   display: flex;
   justify-content: space-around !important;
   align-items: center;
@@ -119,7 +118,7 @@
     justify-content: center;
   }
   .footer_container span {
-    opacity: 1;
+    display: inherit;
   }
   .footer_container ul {
     padding: 20px 0px;
@@ -155,6 +154,7 @@
     padding: 36px 0px;
   }
   .social_media_wrapper {
+    width: 100vw;
     padding: 0px;
   }
   .social_media_icon {
