--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -145,6 +145,39 @@
   text-align: left;
 }
 
+.carrierContainer{
+  width: 100vw;
+  border-bottom: 2px solid #e6e7e8;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.carrierBanner{
+  width: 80vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+}
+.carrierBanner img{
+  width: 100px;
+ background-color: aquamarine;
+ padding: 0px 12px;
+}
+
+.carrierBanner{
+  background-color: #e6e7e8;
+  width: 100vw;
+  height: 150px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+
 .homePromo {
   background-image: url("https://i.imgur.com/rG9g9yy.jpg");
   width: 100vw;
@@ -260,6 +293,9 @@
   }
   .agents p {
     text-align: right;
+  }
+  .carrierContainer{
+    border-bottom: none;
   }
   .homePromo {
     margin: 40px 0px;
