--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -97,6 +97,11 @@
     text-decoration: none;
     color: #00486b;
   }
+  .navNumber span{
+    font-weight: 100;
+    font-size: 16px;
+  }
+
   .nav_number_scrolled {
     text-decoration: none;
     color: #ffffff;
